--- a/index.html
+++ b/index.html
@@ -6,34 +6,43 @@
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 <style>
 body {
-background: linear-gradient(135deg, #000000, #21ac21);
-color: #d4ffd4;
-font-family: 'Segoe UI', sans-serif;
+  background: linear-gradient(135deg, #000000, #21ac21);
+  color: #d4ffd4;
+  font-family: 'Segoe UI', sans-serif;
+  overflow: hidden; /* canvas miatt */
 }
 .shop-btn {
-background: linear-gradient(135deg, #1a3d1a, #2f6e2f);
-transition: transform 0.3s, box-shadow 0.3s;
+  background: linear-gradient(135deg, #1a3d1a, #2f6e2f);
+  transition: transform 0.3s, box-shadow 0.3s;
 }
 .shop-btn:hover {
-transform: scale(1.05);
-box-shadow: 0 0 20px #2f6e2f;
+  transform: scale(1.05);
+  box-shadow: 0 0 20px #2f6e2f;
 }
 .fade-in {
-animation: fadeIn 1s ease-in;
+  animation: fadeIn 1s ease-in;
 }
 @keyframes fadeIn {
-from { opacity: 0; transform: translateY(20px); }
-to { opacity: 1; transform: translateY(0); }
+  from { opacity: 0; transform: translateY(20px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
+/* Canvas háttér stílus */
+#bgCanvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1; /* a tartalom alatt */
 }
 </style>
 </head>
 <body class="flex flex-col items-center justify-center min-h-screen fade-in">
 
+<canvas id="bgCanvas"></canvas>
+
 <img src="webimagine/topix.png" alt="Logo" class="mx-auto mb-6 w-32">
 
-
 <h1 class="text-4xl font-bold text-green-400 mb-10 text-center">Válassz Shopot</h1>
-
 
 <div class="grid grid-cols-1 md:grid-cols-3 gap-6 w-11/12 md:w-2/3">
 <a href="shops/balushop.html" class="shop-btn rounded-2xl p-8 text-center text-xl font-semibold text-green-200">Balushop</a>
@@ -47,6 +56,67 @@ to { opacity: 1; transform: translateY(0); }
 <a href="shops/porbashop.html" class="shop-btn rounded-2xl p-8 text-center text-xl font-semibold text-green-200">Porbashop</a>
 </div>
 
+<script>
+const canvas = document.getElementById("bgCanvas");
+const ctx = canvas.getContext("2d");
+canvas.width = window.innerWidth;
+canvas.height = window.innerHeight;
+
+window.addEventListener("resize", () => {
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+});
+
+class Ball {
+  constructor() {
+    this.x = Math.random() * canvas.width;
+    this.y = Math.random() * canvas.height;
+    this.radius = 5 + Math.random() * 10;
+    this.color = "rgba(144, 238, 144, 0.7)";
+    this.dy = Math.random() * 2 + 1;
+    this.dx = (Math.random() - 0.5) * 1;
+    this.gravity = 0.05;
+    this.friction = 0.9;
+  }
+
+  update() {
+    if (this.y + this.radius + this.dy > canvas.height) {
+      this.dy = -this.dy * this.friction;
+    } else {
+      this.dy += this.gravity;
+    }
+
+    if (this.x + this.radius > canvas.width || this.x - this.radius < 0) {
+      this.dx = -this.dx;
+    }
+
+    this.x += this.dx;
+    this.y += this.dy;
+    this.draw();
+  }
+
+  draw() {
+    ctx.beginPath();
+    ctx.arc(this.x, this.y, this.radius, 0, Math.PI * 2);
+    ctx.fillStyle = this.color;
+    ctx.fill();
+    ctx.closePath();
+  }
+}
+
+const balls = [];
+for (let i = 0; i < 30; i++) {
+  balls.push(new Ball());
+}
+
+function animate() {
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
+  balls.forEach(ball => ball.update());
+  requestAnimationFrame(animate);
+}
+
+animate();
+</script>
 
 </body>
 </html>
