--- a/shops/balushop.html
+++ b/shops/balushop.html
@@ -6,9 +6,10 @@
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 <style>
 body { 
-  background: linear-gradient(135deg, #0a0f0a, #1a3d1a); 
+  background: linear-gradient(135deg, #000000, #21ac21); 
   color: #d4ffd4; 
   font-family: 'Segoe UI', sans-serif; 
+  overflow: hidden; /* canvas miatt */
 }
 .close-btn {
   position: fixed;
@@ -42,23 +43,32 @@ body {
   cursor: not-allowed;
   box-shadow: none;
 }
+
+/* Canvas háttér stílus */
+#bgCanvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1; /* a tartalom alatt */
+}
 </style>
 </head>
 <body class="flex flex-col items-center min-h-screen text-center p-10">
-  
-    <a href="../index.html" class="close-btn">&times;</a>  
+
+<canvas id="bgCanvas"></canvas>
+
+<a href="../index.html" class="close-btn">&times;</a>  
 
 <h1 class="text-5xl font-bold text-green-400 mb-10 mt-4">BaluShop</h1>
 
-<!-- Kép a cím után -->
 <img src="../webimagine/balushop.png" alt="Balushop kép" class="mb-10 w-120 rounded-xl shadow-lg">
 
-<!-- Leírás szép formázva -->
 <div class="mt-4 space-y-3 text-lg leading-relaxed">
     <p><strong>Kordi:</strong> -48 66 24</p>
     <p><strong>Leírás:</strong> xyzq</p>
     <p><strong>Tulaj:</strong> Balu613749</p>
     <p><strong>Ár folyam:</strong> 1.5 - 50k</p>
+</div>
 
 <!-- Szavazás -->
 <div class="mt-10">
@@ -67,33 +77,86 @@ body {
 </div>
 
 <script>
+// Szavazás
 let votes = localStorage.getItem("balushopVotes") ? parseInt(localStorage.getItem("balushopVotes")) : 0;
 let hasVoted = localStorage.getItem("balushopHasVoted") === "true";
-
-// Frissítjük a szavazatok kijelzését
 document.getElementById("voteCount").innerText = "Szavazatok: " + votes;
-
-// Ha már szavazott, tiltjuk a gombot
 if (hasVoted) {
   document.getElementById("voteBtn").disabled = true;
   document.getElementById("voteBtn").innerText = "Már szavaztál";
 }
-
 function vote() {
   if (!hasVoted) {
     votes++;
     hasVoted = true;
-
-    // Mentés localStorage-be
     localStorage.setItem("balushopVotes", votes);
     localStorage.setItem("balushopHasVoted", true);
-
-    // Frissítés a képernyőn
     document.getElementById("voteCount").innerText = "Szavazatok: " + votes;
     document.getElementById("voteBtn").disabled = true;
     document.getElementById("voteBtn").innerText = "Már szavaztál";
   }
 }
+
+// Háttér animáció
+const canvas = document.getElementById("bgCanvas");
+const ctx = canvas.getContext("2d");
+canvas.width = window.innerWidth;
+canvas.height = window.innerHeight;
+
+window.addEventListener("resize", () => {
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+});
+
+class Ball {
+  constructor() {
+    this.x = Math.random() * canvas.width;
+    this.y = Math.random() * canvas.height;
+    this.radius = 5 + Math.random() * 10;
+    this.color = "rgba(144, 238, 144, 0.7)";
+    this.dy = Math.random() * 2 + 1;
+    this.dx = (Math.random() - 0.5) * 1;
+    this.gravity = 0.05;
+    this.friction = 0.9;
+  }
+
+  update() {
+    if (this.y + this.radius + this.dy > canvas.height) {
+      this.dy = -this.dy * this.friction;
+    } else {
+      this.dy += this.gravity;
+    }
+
+    if (this.x + this.radius > canvas.width || this.x - this.radius < 0) {
+      this.dx = -this.dx;
+    }
+
+    this.x += this.dx;
+    this.y += this.dy;
+    this.draw();
+  }
+
+  draw() {
+    ctx.beginPath();
+    ctx.arc(this.x, this.y, this.radius, 0, Math.PI * 2);
+    ctx.fillStyle = this.color;
+    ctx.fill();
+    ctx.closePath();
+  }
+}
+
+const balls = [];
+for (let i = 0; i < 30; i++) {
+  balls.push(new Ball());
+}
+
+function animate() {
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
+  balls.forEach(ball => ball.update());
+  requestAnimationFrame(animate);
+}
+
+animate();
 </script>
 
 </body>
