--- a/index.html
+++ b/index.html
@@ -5,12 +5,24 @@
 <title>Shop Választó</title>
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 <style>
-body {
-  background: linear-gradient(135deg, #000000, #21ac21);
-  color: #d4ffd4;
-  font-family: 'Segoe UI', sans-serif;
-  overflow: hidden; /* canvas miatt */
+body { 
+  background: linear-gradient(135deg, #0a0f0a, #21ac21); 
+  color: #d4ffd4; 
+  font-family: 'Segoe UI', sans-serif; 
+  /* overflow: hidden; --> eltávolítva */
+  position: relative; /* canvas-hoz */
 }
+
+#bgCanvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  pointer-events: none; /* ne akadályozza a görgetést vagy kattintást */
+}
+
 .shop-btn {
   background: linear-gradient(135deg, #1a3d1a, #2f6e2f);
   transition: transform 0.3s, box-shadow 0.3s;
