--- a/shops/almashop.html
+++ b/shops/almashop.html
@@ -6,10 +6,21 @@
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 <style>
 body { 
-  background: linear-gradient(135deg, #000000, #21ac21); 
+  background: linear-gradient(135deg, #0a0f0a, #21ac21); 
   color: #d4ffd4; 
   font-family: 'Segoe UI', sans-serif; 
-  overflow: hidden; /* canvas miatt */
+  /* overflow: hidden; --> eltávolítva */
+  position: relative; /* canvas-hoz */
+}
+
+#bgCanvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  pointer-events: none; /* ne akadályozza a görgetést vagy kattintást */
 }
 .close-btn {
   position: fixed;
