--- a/shops/porbashop.html
+++ b/shops/porbashop.html
@@ -9,8 +9,20 @@ body {
   background: linear-gradient(135deg, #0a0f0a, #21ac21); 
   color: #d4ffd4; 
   font-family: 'Segoe UI', sans-serif; 
-  overflow: hidden; /* canvas miatt */
+  /* overflow: hidden; --> eltávolítva */
+  position: relative; /* canvas-hoz */
 }
+
+#bgCanvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  pointer-events: none; /* ne akadályozza a görgetést vagy kattintást */
+}
+
 .close-btn {
   position: fixed;
   top: 15px;
